crates/ignis_driver/tests/snapshots/e2e_ok__match_payload_binding_out_of_owned_field_is_dropped_at_arm_end.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 2
stdout: (empty)
stderr: (empty)
