crates/ignis_driver/tests/snapshots/e2e_ok__match_payload_partial_move_leaves_the_other_field_readable.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 41
stdout: (empty)
stderr: (empty)
