crates/ignis_driver/tests/snapshots/e2e_ok__nested_namespace_with_constants.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 58
stdout: (empty)
stderr: (empty)
