crates/ignis_driver/tests/snapshots/e2e_ok__ownership_diverging_branch_no_double_drop.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 3
stdout: dropped
dropped
stderr: (empty)
